--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "safety",
   "version": "0.1.0",
-  "homepage":"https://mtchkadua.github.io/bootcamptask",
+  "homepage":"https://MTchkadua.github.io/bootcamptask",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
